[package]
name = "rust-portfolio"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]


[dependencies]
log = "0.4"
strum = "0.19"
strum_macros = "0.19"
serde_derive = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = { version = "0.4.4", optional = true }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
gloo-timers = "0.3.0"
pulldown-cmark="0.10.3"
chrono = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.42"
rand = "0.8.5"
toml = "0.5.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'KeyboardEvent',
]
